--- a/src/app/pages/ncs/create/steps/step1/parceiro/parceiro.component.html
+++ b/src/app/pages/ncs/create/steps/step1/parceiro/parceiro.component.html
@@ -130,7 +130,7 @@
 </div>
 
 <div *ngIf="!hasSelected()">
-  <app-waiting-product titleFigure="Aguardando dados do parceiro"></app-waiting-product>
+  <app-waiting-product titleFigure="Aguardando dados do parceiro" image="../../../../../../../assets/images/hand-shake.svg"></app-waiting-product>
 </div>
 
 <div class="div-ident-parceiro pr-4 pb-0 " *ngIf="hasSelected()">
