--- a/src/app/pages/ncs/about/about.component.html
+++ b/src/app/pages/ncs/about/about.component.html
@@ -20,7 +20,7 @@
             <app-costs></app-costs>
         </div>
     </p-tabPanel>
-    <p-tabPanel header="Avaliação SGQ" leftIcon="bi bi-search">
+    <p-tabPanel header="Avaliação SGQ" leftIcon="bi bi-search" (click)="test()">
         <div class="content-box">
             
             <app-sgq-evaluation></app-sgq-evaluation>
