--- a/src/app/pages/ncs/create/steps/step2/rejection-point/rejection-point-items/rejection-point-items.component.html
+++ b/src/app/pages/ncs/create/steps/step2/rejection-point/rejection-point-items/rejection-point-items.component.html
@@ -7,6 +7,7 @@
     [style]="{ height: '210px' }"
     [(ngModel)]="nonComplianceService.nc.text_area_reject_point"
     [modules]="{counter: {container: '#counterR',unit: 'character'}}"
+    [readonly]="!nonComplianceService.hasProduct()"
   ></p-editor>
   <div id="counterR" class="text-end">0</div>
 </div>
