alterações na tela de listagem - layout

--- a/src/app/pages/ncs/list/ncs-list.component.html
+++ b/src/app/pages/ncs/list/ncs-list.component.html
@@ -34,7 +34,7 @@ currentPageReportTemplate="Exibindo de {first} a {last} de {totalRecords} regist
     <tr>
       <th pSortableColumn="id">
         <div class="flex justify-content-between align-items-center">
-            Número
+            Número<br>
             <p-sortIcon field="id"></p-sortIcon>
             <p-columnFilter type="number" field="id" display="menu" class="ml-auto"></p-columnFilter>
         </div>
@@ -42,7 +42,7 @@ currentPageReportTemplate="Exibindo de {first} a {last} de {totalRecords} regist
       
       <th pSortableColumn="emissor">
         <div class="flex justify-content-between align-items-center">
-            Emissor
+            Emissor<br>
             <p-sortIcon field="emissor"></p-sortIcon>
             <p-columnFilter type="text" field="emissor" display="menu" class="ml-auto"></p-columnFilter>
         </div>
@@ -50,7 +50,7 @@ currentPageReportTemplate="Exibindo de {first} a {last} de {totalRecords} regist
 
       <th pSortableColumn="tipos_nc_item">
         <div class="flex justify-content-between align-items-center">
-            Tipo de NC
+            Tipo de NC<br>
             <p-sortIcon field="tipos_nc_item"></p-sortIcon>
             <p-columnFilter type="text" field="tipos_nc_item" display="menu" class="ml-auto"></p-columnFilter>
         </div>
@@ -59,7 +59,7 @@ currentPageReportTemplate="Exibindo de {first} a {last} de {totalRecords} regist
 
       <th pSortableColumn="tipos_local_item">
         <div class="flex justify-content-between align-items-center">
-            Setor Afetado
+            Setor Afetado<br>
             <p-sortIcon field="tipos_local_item"></p-sortIcon>
             <p-columnFilter type="text" field="tipos_local_item" display="menu" class="ml-auto"></p-columnFilter>
         </div>
@@ -67,7 +67,7 @@ currentPageReportTemplate="Exibindo de {first} a {last} de {totalRecords} regist
 
       <th pSortableColumn="dsc_produto">
         <div class="flex justify-content-between align-items-center">
-            Produto
+            Produto<br>
             <p-sortIcon field="dsc_produto"></p-sortIcon>
             <p-columnFilter type="text" field="dsc_produto" display="menu" class="ml-auto"></p-columnFilter>
         </div>
@@ -75,7 +75,7 @@ currentPageReportTemplate="Exibindo de {first} a {last} de {totalRecords} regist
 
       <th pSortableColumn="status">
           <div class="flex justify-content-between align-items-center">
-              Status
+              Status<br>
               <p-sortIcon field="status"></p-sortIcon>
               <p-columnFilter type="text" field="status" display="menu" class="ml-auto"></p-columnFilter>
           </div>
@@ -84,7 +84,7 @@ currentPageReportTemplate="Exibindo de {first} a {last} de {totalRecords} regist
 
       <th pSortableColumn="data_abertura">
         <div class="flex justify-content-between align-items-center">
-            Data de Abertura
+            Data de Abertura<br>
             <p-sortIcon field="data_abertura"></p-sortIcon>
             <p-columnFilter type="date" field="data_abertura" display="menu" class="ml-auto"></p-columnFilter>
         </div>
@@ -93,7 +93,7 @@ currentPageReportTemplate="Exibindo de {first} a {last} de {totalRecords} regist
 
       <th pSortableColumn="prazo">
         <div class="flex justify-content-between align-items-center">
-            Prazo
+            Prazo<br>
             <p-sortIcon field="prazo"></p-sortIcon>
             <p-columnFilter type="numeric" field="prazo" display="menu" class="ml-auto"></p-columnFilter>
         </div>
