--- a/src/app/bootstrap/bootstrap.component.html
+++ b/src/app/bootstrap/bootstrap.component.html
@@ -1,6 +1,6 @@
 
 <app-menu></app-menu>
-<div class="container">
+<div class="container" style="width: 1800px; max-width: 1800px;">
   <router-outlet></router-outlet>
 </div>
 
