--- a/src/app/pages/ncs/create/steps/step1/identificacao-da-nc/identificacao-da-nc.component.html
+++ b/src/app/pages/ncs/create/steps/step1/identificacao-da-nc/identificacao-da-nc.component.html
@@ -82,7 +82,7 @@
           type="date"
           pInputText
           id="date-input"
-          formControlName="data_abertura"
+          formControlName="data_abertura_str"
         />
       </span>
       <p>Altere a data caso a NC tenha acontecido antes deste cadastro.</p>
@@ -97,7 +97,7 @@
           type="date"
           pInputText
           id="date-input"
-          formControlName="data_fechamento"
+          formControlName="data_fechamento_str"
         />
       </span>
       <p>
