--- a/src/app/pages/ncs/list/ncs-list.component.html
+++ b/src/app/pages/ncs/list/ncs-list.component.html
@@ -97,7 +97,7 @@
         </th>
 
         <th pSortableColumn="tipos_nc_item">
-          <div class="flex justify-content-between align-items-center">
+          <div class="flex justify-content-between align-items-center" style="width:100px;">
               Tipo de NC<br>
               <p-sortIcon field="tipos_nc_item"></p-sortIcon>
               <p-columnFilter type="text" field="tipos_nc_item" display="menu" class="ml-auto"></p-columnFilter>
@@ -106,7 +106,7 @@
 
 
         <th pSortableColumn="tipos_local_item">
-          <div class="flex justify-content-between align-items-center">
+          <div class="flex justify-content-between align-items-center" style="width:130px;">
               Setor Afetado<br>
               <p-sortIcon field="tipos_local_item"></p-sortIcon>
               <p-columnFilter type="text" field="tipos_local_item" display="menu" class="ml-auto"></p-columnFilter>
@@ -131,7 +131,7 @@
 
 
         <th pSortableColumn="data_abertura">
-          <div class="flex justify-content-between align-items-center">
+          <div class="flex justify-content-between align-items-center" style="width:130px;">
               Data de Abertura<br>
               <p-sortIcon field="data_abertura"></p-sortIcon>
               <p-columnFilter type="date" field="data_abertura" display="menu" class="ml-auto"></p-columnFilter>
