--- a/src/app/pages/ncs/list/ncs-list.component.html
+++ b/src/app/pages/ncs/list/ncs-list.component.html
@@ -140,7 +140,7 @@
 
 
         <th pSortableColumn="prazo">
-          <div class="flex justify-content-between align-items-center">
+          <div class="flex justify-content-between align-items-center" style="width:80px;">
               Prazo<br>
               <p-sortIcon field="prazo"></p-sortIcon>
               <p-columnFilter type="numeric" field="prazo" display="menu" class="ml-auto"></p-columnFilter>
