--- a/src/app/pages/ncs/sgq-evaluation/steps/reoccurrence/add-nc-dialog/add-nc-dialog.component.html
+++ b/src/app/pages/ncs/sgq-evaluation/steps/reoccurrence/add-nc-dialog/add-nc-dialog.component.html
@@ -70,13 +70,13 @@
 
                     <td>
                     <span [ngSwitch]="nc.status" >
-                        <span *ngSwitchCase="'open'"> Aberta</span>
-                        <span *ngSwitchCase="'running'"> Em execução</span>
-                        <span *ngSwitchCase="'late'"> Atrasada</span>
-                        <span *ngSwitchCase="'deleted'"> Deletada</span>
-                        <span *ngSwitchCase="'archived'"> Arquivada</span>
-                        <span *ngSwitchCase="'canceled'"> Cancelada</span>
-                        <span *ngSwitchCase="'closed'"> Fechada</span>
+                        <span *ngSwitchCase="'open'"> Em elaboração</span>
+            <span *ngSwitchCase="'running'"> Em execução</span>
+            <span *ngSwitchCase="'late'"> Atrasada</span>
+            <span *ngSwitchCase="'deleted'"> Deletada</span>
+            <span *ngSwitchCase="'archived'"> Arquivada</span>
+            <span *ngSwitchCase="'canceled'"> Cancelada</span>
+            <span *ngSwitchCase="'closed'"> Fechada</span>
                     </span>
                     </td>
                     <td>{{ parseDate(nc.data_fechamento||"")||"00/00/0000" }}</td>
