width do grafico de barras

--- a/src/app/pages/ncs/list/ncs-list.component.html
+++ b/src/app/pages/ncs/list/ncs-list.component.html
@@ -51,7 +51,7 @@
       [results]="lineChartData"
       [legendPosition]="legendPosition"
       [legendTitle]="legendTitle"
-      >
+      [barPadding]="0"      >
     </ngx-charts-bar-vertical-2d>
   </div>
 </div>
