--- a/src/app/pages/ncs/create/steps/step2/product/product.component.html
+++ b/src/app/pages/ncs/create/steps/step2/product/product.component.html
@@ -20,7 +20,7 @@
     </div>
   </div>
 </div>
-<div class="p-fluid autoComplete">
+<div class="p-fluid autoComplete mb-1">
   <p-autoComplete
     [(ngModel)]="nonComplicanceService.autoCompleteValue"
     [suggestions]="results"
