--- a/src/app/pages/ncs/about/proposal/proposal.component.html
+++ b/src/app/pages/ncs/about/proposal/proposal.component.html
@@ -247,7 +247,7 @@
                 </ng-template>
                 <ng-template pTemplate="content">
                     <div class="card">
-                        <p-table [value]="aboutService.nc.contacts">
+                        <p-table [value]="getContacts()">
                             <ng-template pTemplate="header">
                                 <tr>
                                     <th>Nome</th>
