--- a/src/app/pages/ncs/create-prop/steps/step5/review-infomations.component.html
+++ b/src/app/pages/ncs/create-prop/steps/step5/review-infomations.component.html
@@ -236,7 +236,7 @@
         </ng-template>
         <ng-template pTemplate="content">
             <div class="card">
-                <p-table [value]="propService.propSolution.contacts">
+                <p-table [value]="contactsCopy">
                     <ng-template pTemplate="header">
                         <tr>
                             <th>Nome</th>
