--- a/src/app/pages/ncs/create/steps/step4/revisar-info.component.html
+++ b/src/app/pages/ncs/create/steps/step4/revisar-info.component.html
@@ -108,7 +108,7 @@
     </h2>
     <p-editor
       [(ngModel)]="this.nonComplicanceService.nc.text_area_acoes"
-      [style]="{ height: '100px', border: '1px solid #dddddd' }"
+      [style]="{ height: '100px', border: '1px solid #dddddd', 'font-size': '15px' }"
       [readonly]="true"
     >
       <ng-template pTemplate="header" hidden> </ng-template>
