--- a/src/app/pages/ncs/about/sgq-evaluation/sgq-evaluation.component.html
+++ b/src/app/pages/ncs/about/sgq-evaluation/sgq-evaluation.component.html
@@ -205,7 +205,7 @@
             </ng-template>
             <ng-template pTemplate="content">
                 <div class="card">
-                    <p-table [value]="aboutSrv.nc.contacts">
+                    <p-table [value]="getContacts()">
                         <ng-template pTemplate="header">
                             <tr>
                                 <th>Nome</th>
