--- a/src/app/pages/ncs/sgq-evaluation/steps/notifications/notifications.component.html
+++ b/src/app/pages/ncs/sgq-evaluation/steps/notifications/notifications.component.html
@@ -16,7 +16,7 @@
 </div>
 
 <div class="card">
-    <p-table [value]="this.sgqServ.nc.contacts">
+    <p-table [value]="contactsCopy">
         <ng-template pTemplate="header">
             <tr>
                 <th>Nome</th>
