--- a/src/app/pages/ncs/sgq-evaluation/steps/evidence/evidence.component.html
+++ b/src/app/pages/ncs/sgq-evaluation/steps/evidence/evidence.component.html
@@ -8,7 +8,7 @@
 <div class="d-flex flex-row flex-wrap justify-content-between mt-4">
     <div class="">
         <p-editor
-                [style]="{ height: '210px', width: '700px' }"
+                [style]="{ height: '210px', width: '700px', 'font-size': '25px' }"
                 [(ngModel)]="sgqServ.sgq.text_area1"
                 [modules]="{counter: {container: '#counterEv',unit: 'character'}}"
         ></p-editor>
