--- a/src/app/pages/ncs/about/costs/costs.component.html
+++ b/src/app/pages/ncs/about/costs/costs.component.html
@@ -52,7 +52,7 @@
                             type="button"
                             icon="bi bi-download"
                             class="p-button-secondary p-button-text"
-                            [href]="'http://localhost:3333/costs/files/download/'+doc.id"
+                            [href]="getUrl()"
                             download
                     ></a>
                     <button
