--- a/src/app/pages/ncs/sgq-evaluation/steps/reoccurrence/nc-info/nc-info.component.html
+++ b/src/app/pages/ncs/sgq-evaluation/steps/reoccurrence/nc-info/nc-info.component.html
@@ -57,7 +57,7 @@
                                         type="button"
                                         icon="bi bi-download"
                                         class="p-button-secondary p-button-text"
-                                        [href]="'http://localhost:3333/costs/files/download/'+doc.id"
+                                        [href]="getUrl()+'/costs/files/download/'+doc.id"
                                         download
                                 ></a>
                             </td>
