--- a/src/app/pages/ncs/create-prop/steps/step3/action-plan.component.html
+++ b/src/app/pages/ncs/create-prop/steps/step3/action-plan.component.html
@@ -13,6 +13,7 @@
             pInputText
             placeholder="Digite"
             class="p-input text-sm input"
+            maxlength="500"
     />
 </div>
 <div class="d-flex justify-content-between flex-column flex-lg-row mt-2">
