--- a/src/app/pages/ncs/about/view-nc/view-nc.component.html
+++ b/src/app/pages/ncs/about/view-nc/view-nc.component.html
@@ -63,14 +63,13 @@
             Descrição da Não Conformidade
           </h2>
           <p-editor
-            [style]="{ height: '144px', border: '1px solid #dddddd' }"
+            [style]="{ height: '144px', border: '1px solid #dddddd', 'font-size': '20px' }"
             [readonly]="true"
             [ngModel]="aboutSrvc.nc?.text_area_nc"
           >
             <ng-template pTemplate="header"> </ng-template>
           </p-editor>
         </div>
-        <p-divider layout="vertical"></p-divider>
         <div class="dados-parceiro razao-social item">
           <h2 class="mr-2 mb-5">
             <i class="pi pi-camera"></i>
@@ -98,12 +97,11 @@
       <i class="bi bi-geo"></i>
       Descrição de Ações Imediatas
     </h2>
-    <p-editor [style]="{'height':'144px', border: '1px solid #dddddd' }" [readonly]="true" [ngModel]="aboutSrvc.nc?.text_area_acoes">
+    <p-editor [style]="{'height':'144px', border: '1px solid #dddddd', 'font-size': '20px' }" [readonly]="true" [ngModel]="aboutSrvc.nc?.text_area_acoes">
       <ng-template pTemplate="header" hidden>
       </ng-template>
     </p-editor>
   </div>
-  <p-divider layout="vertical"></p-divider>
   <div class="dados-parceiro razao-social item">
     <h2 class="mr-2 mb-5">
       <i class="pi pi-camera"></i>
