--- a/src/app/pages/ncs/create/steps/step2/rejection-point/rejection-point-items/rejection-point-items.component.html
+++ b/src/app/pages/ncs/create/steps/step2/rejection-point/rejection-point-items/rejection-point-items.component.html
@@ -11,7 +11,7 @@
   <div id="counterR" class="text-end">0</div>
 </div>
 
-<div *ngIf="returnOpScreen()">
+<div *ngIf="returnOpScreen() || returnPrScreen()">
   <div class="row">
     <div class="col">
       <div class="p-fluid autoComplete">
@@ -105,8 +105,8 @@
 </div>
 
 <div *ngIf="returnPrScreen()">
-  <div class="row">
-    <div class="col-8">
+  <div class="row mt-3">
+    <div class="col">
       <div class="p-fluid autoComplete">
         <label class="">Selecionar PR</label>
         <p-autoComplete
@@ -142,20 +142,6 @@
             </div></ng-template
           >
         </p-autoComplete>
-      </div>
-    </div>
-    <div class="col att-button">
-      <div>
-        <p><i class="pi pi-history"></i> ultima atualização:</p>
-        <button
-          href="http://localhost:4200/ncs/import"
-          role="button"
-          class="btn btn-dark"
-          
-        >
-          Atualizar PRs
-          <i class="pi pi-download" id="icon-button"></i>
-        </button>
       </div>
     </div>
   </div>
