--- a/src/app/pages/ncs/create/steps/step1/parceiro/parceiro.component.html
+++ b/src/app/pages/ncs/create/steps/step1/parceiro/parceiro.component.html
@@ -82,7 +82,7 @@
         [style]="{ width: '100%' }"
         [inputStyle]="{ width: '100%' }"
         class="p-autocomplete"
-        placeholder="Busque por código SAP ou razão social..."
+        [placeholder]="label"
         field="name"
       >
         <ng-template let-brand pTemplate="  ">
