--- a/src/app/pages/ncs/create/steps/step4/products-and-points/products-and-points.component.html
+++ b/src/app/pages/ncs/create/steps/step4/products-and-points/products-and-points.component.html
@@ -5,7 +5,7 @@
       <h2 class="mr-2">
         {{
           this.nonComplicanceService.nc?.product?.name ||
-            "Dado não preenchido"
+            "Não se Aplica"
         }}
       </h2>
       <p-chip>
@@ -16,7 +16,7 @@
     <p class="d-block">
       {{
       this.nonComplicanceService.nc?.product?.description ||
-          "Dado não preenchido"
+          "Não se Aplica"
       }}
     </p>
   </div>
@@ -28,7 +28,7 @@
           <span class="info-titulo">Quantidade Total</span>
           <br />
           <span class="info-dados">{{
-            this.nonComplicanceService.nc.quant_total || "0"
+            this.nonComplicanceService.nc.quant_total || "Não se Aplica"
           }}</span>
         </div>
       </div>
@@ -38,7 +38,7 @@
           <span class="info-titulo">Quantidade em Não Conformidade</span>
           <br />
           <span class="info-dados">{{
-            this.nonComplicanceService.nc.quant_nc || "0"
+            this.nonComplicanceService.nc.quant_nc || "Não se Aplica"
           }}</span>
         </div>
       </div>
@@ -47,7 +47,7 @@
         <div>
           <span class="info-titulo">Percentual</span>
           <br />
-          <span class="info-dados">{{ percent || "0" }}%</span>
+          <span class="info-dados">{{ getPercent() }}</span>
         </div>
       </div>
     </div>
