--- a/src/app/pages/attach/attach.component.css
+++ b/src/app/pages/attach/attach.component.css
@@ -11,31 +11,14 @@
     margin-left: -15px;
 }
 
-.cabecalho h1 {
-    font-size: 25px;
-    font-weight: 500;
-    margin-bottom: 0px;
-    margin-top: 0px;
 
-}
-
-.cabecalho p {
-    font-size: 14px;
-    color: gray;
-}
 
 label {
     font-size: 14px;
     margin-bottom: 6px;
 }
 
-textarea {
-    outline: none;
-    border: 1px solid black;
-    border-radius: 5px;
-    padding: 12px;
-    height: 250px;
-}
+
 
 .div-attachment {
     outline: none;
@@ -46,15 +29,6 @@ textarea {
     height: 252px;
     text-align: center;
     background-color: rgb(243, 243, 243);
-}
-
-.col-attachment {
-    min-width: 400px;
-}
-
-.col-editor {
-    min-width: 650px;
-    min-height: 210px;
 }
 
 .div-attachment h1 {
@@ -102,7 +76,7 @@ textarea {
     outline: none;
 }
 
-.white-background-files p {
+.files {
     font-size: 12px;
     color: rgb(89, 89, 89);
     color: gray;
@@ -130,13 +104,5 @@ textarea {
     z-index: 3;
 }
 
-label {
-    font-size: 13px;
-    font-weight: bold;
-    margin-bottom: 2px;
-    margin-top: 10px;
-}
 
-.p-editor {
-    min-width: 250px;
-}
+
