--- a/src/app/pages/ncs/about/costs/costs.component.css
+++ b/src/app/pages/ncs/about/costs/costs.component.css
@@ -89,7 +89,7 @@ label {
     font-size: 14px;
     outline: none;
 }
-.white-background-files p {
+.files {
     font-size: 12px;
     color: rgb(89, 89, 89);
     color: gray;
